# json2bin

./: .gitignore  Cargo.toml  README.md
src/: main.rs  sample.jsonl
