[package]
name = "json2bin"
version = "0.1.2"
edition = "2021"
authors = ["Cahya Wirawan <cahya.wirawan@gmail.com>"]
description = "A fast jsonl to RWKV binidx converter in Rust"
license = "Apache-2.0"
documentation = "https://github.com/cahya-wirawan/json2bin"
exclude = []

[dependencies]
rwkv-tokenizer = "0.8.5"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
bytemuck = "1.16.1"
clap = { version = "4.5.9", features = ["derive"] }
tqdm = "0.7.0"
